--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,16 @@
         "src":"assets/flappy_bird_144px.png",
         "sizes": "144x144",
         "type": "image/png"
+      },
+      {
+        "src":"assets/flappy_bird_192px.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src":"assets/flappy_bird_512px.png",
+        "sizes": "512x512",
+        "type": "image/png"
       }
     ],
     "start_url": "/index.html",
